--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -5,16 +5,27 @@ body {
 
 .menu_container {
   position: absolute;
-  top: 0;
-  width: 350px;
-  left: calc(50% - 175px);
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background: #EEEEEE;
+  top: 20px;
+  width: 500px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  border: 2px solid #3A3A3A;
+  box-shadow: 0 0 20px rgba(90, 91, 76, 0.35);
+  padding-left: 10px;
+  padding-right: 10px;
+  background: #FFF7CC;
   height: 60px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+.eraser_icon {
+  transform: translateY(4px);
 }
 
 .menu_button {
@@ -23,11 +34,14 @@ body {
   border-radius: 8px;
   border: none;
   transition: 0.3s;
-  background: #FFF1DC;
+  background: #fff7cc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .menu_button:hover {
-  background: #E8D5C4;
+  background: #FFFBEB;
 }
 
 .menu_button_active {
@@ -35,7 +49,11 @@ body {
   height: 40px;
   border-radius: 8px;
   border: none;
-  background: #E8D5C4;
+  box-shadow: 0 0 5px rgba(90, 91, 76, 0.35);
+  background: #FFFBEB;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .cursor {
